crates/herder-tui/src/ui/snapshots/herder_tui__ui__snapshot__mode-bar-45-dark-unicode.snap
---
source: crates/herder-tui/src/ui/snapshot.rs
expression: dump(&buffer)
---
|  PROMPT   enter send   ● box  ● m2  ◌ vault |
|  NAVIGATE   / commands  @ mention           |

 0   0..1   fg=#e6e6e6 bg=#111216
 0   1..9   fg=#111216 bg=#7aa2f7 BOLD
 0   9..11  fg=#e6e6e6 bg=#111216
 0  11..16  fg=#e6e6e6 bg=#111216 BOLD
 0  16..21  fg=#7f8492 bg=#111216
 0  21..24  fg=#e6e6e6 bg=#111216
 0  24..25  fg=#9ece6a bg=#111216
 0  25..31  fg=#e6e6e6 bg=#111216
 0  31..32  fg=#9ece6a bg=#111216
 0  32..37  fg=#e6e6e6 bg=#111216
 0  37..38  fg=#e0af68 bg=#111216
 0  38..45  fg=#e6e6e6 bg=#111216
 1   0..1   fg=#e6e6e6 bg=#111216
 1   1..11  fg=#111216 bg=#6c8ebf BOLD
 1  11..13  fg=#e6e6e6 bg=#111216
 1  13..14  fg=#e6e6e6 bg=#111216 BOLD
 1  14..23  fg=#7f8492 bg=#111216
 1  23..25  fg=#e6e6e6 bg=#111216
 1  25..26  fg=#e6e6e6 bg=#111216 BOLD
 1  26..34  fg=#7f8492 bg=#111216
 1  34..45  fg=#e6e6e6 bg=#111216
